# py-fastcar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: benchmark.py  compare_R_vs_Python.executed.ipynb  compare_R_vs_Python.ipynb  r_driver_fastcar.R  tutorial_standalone.py
pyfastcar/: __init__.py  core.py  io.py
tests/: conftest.py  r_reference_driver.R  test_exact_match.py  test_r_parity.py  test_smoke.py
