[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfastcar"
version = "0.1.0"
description = "Pure-Python port of the R package FastCAR — fast, deterministic per-gene ambient-RNA correction for droplet-based single-cell RNA-seq."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Zehua Zeng", email = "starlitnightly@163.com" },
]
keywords = [
    "FastCAR", "ambient-RNA", "ambient-RNA-correction", "single-cell",
    "scRNA-seq", "droplet", "10x", "CellRanger", "empty-droplets",
    "decontamination", "anndata", "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "anndata>=0.8",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "scanpy"]

[project.urls]
Homepage = "https://github.com/omicverse/py-fastcar"
Repository = "https://github.com/omicverse/py-fastcar"
Issues = "https://github.com/omicverse/py-fastcar/issues"
"Upstream R package" = "https://github.com/LungCellAtlas/FastCAR"
"Upstream (omicverse)" = "https://github.com/Starlitnightly/omicverse"

[tool.setuptools.packages.find]
include = ["pyfastcar*"]
exclude = ["tests*", "examples*", "FastCAR-ref*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::RuntimeWarning",
]
